# externalterminal

./: CMakeLists.txt  LICENSE  README.md
src/: Command.hpp  Path.hpp  Profile.cpp  Profile.hpp  Shell.cpp  Shell.hpp  Terminal.cpp  Terminal.hpp  Utils.cpp  Utils.hpp  main.cpp
